--- a/FormReposrts.resx
+++ b/FormReposrts.resx
@@ -121,6 +121,9 @@
     <value>155, 17</value>
   </metadata>
   <metadata name="BooksReport1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>155, 17</value>
+    <value>63, 18</value>
+  </metadata>
+  <metadata name="libraryDataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>215, 18</value>
   </metadata>
 </root>
